--- a/asaGiftParser/asaGiftParser.csproj
+++ b/asaGiftParser/asaGiftParser.csproj
@@ -10,4 +10,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
+    </ItemGroup>
+
 </Project>
